# cmake_sample

MyProject/: CMakeLists.txt
MyProject/include/: program.h
MyProject/mylib/: CMakeLists.txt
MyProject/mylib/include/: mylib.h
MyProject/mylib/src/: mylib.cpp
MyProject/src/: main.cpp  program.cpp
